Fixed NotebookReport position on smaller screens and insert note function. #2827

--- a/src/main/webapp/site/src/app/notebook/notebook-report/notebook-report.component.scss
+++ b/src/main/webapp/site/src/app/notebook/notebook-report/notebook-report.component.scss
@@ -51,7 +51,7 @@ $width-collapsed: 300px !default;
     max-width: $title-width-collapsed;
   }
 
-  @media (max-width: breakpoint('xs.max')) {
+  @media (max-width: breakpoint('xs.max') - 1) {
     max-width: $title-width-collapsed;
   }
 }
